<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AnimeImportsApp</string>
    <string name="store_address">1305 Palmetto Ave  Suite C\nPacifica, CA 94044</string>
    <string name="store_number">(650) 488-7900</string>
    <string name="store_email">webmaster@animeimports.net</string>
    <string name="store_hours">1:00pm - 7:00pm everyday</string>
    <string name="store_url">http://www.animeimports.net</string>
    <string name="league_session">Session</string>
    <string name="league_lifetime">Lifetime</string>
    <string name="league_name">Name</string>
    <color name="tv_highlight">#0099CC</color>
    <color name="tv_normal">#ffffffff</color>
    <string name="store_address_lattitude">37.639899</string>
    <string name="store_address_longitude">-122.492449</string>
    
    <string-array name="league_weeks">
    	<item>Session</item>
    	<item>Lifetime</item>
    </string-array>
    
    <string-array name="calendar_upcoming">
    	<item>1 week</item>
    	<item>2 weeks</item>
    	<item>3 weeks</item>
    	<item>4 weeks</item>
    	<item>5 weeks</item>
    	<item>6 weeks</item>
    	<item>7 weeks</item>
    	<item>8 weeks</item>
    	<item>9 weeks</item>
    	<item>10 weeks</item>
    </string-array>
</resources>
